--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <h1 class="page-title">Taskinator</h1>
       <p>Click the button below to add a new task!</p>
-      <button class="btn">Add Task</button>
+      <button class="btn" id="save-task">Add Task</button>
   </header>
   <!-- END of HEADER -->
 
@@ -22,7 +22,7 @@
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
 
-      <Ul class="task-list">
+      <Ul class="task-list" id="tasks-to-do">
         <li class="task-item">A task is going to be added soon!</li>
       </Ul>
 
