added edit and delete option + ability to select status

--- a/index.html
+++ b/index.html
@@ -34,12 +34,25 @@
 
   <!-- MAIN -->
   <main class="page-content">
+
+    <!-- Tasks To Do -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
-
       <Ul class="task-list" id="tasks-to-do"></Ul>
-
     </section>
+
+    <!-- Tasks In Progress -->
+    <section class="task-list-wrapper">
+      <h2 class="list-title">Tasks In Progress</h2>
+      <Ul class="task-list" id="tasks-in-progress"></Ul>
+    </section>
+
+    <!-- Tasks Completed -->
+    <section class="task-list-wrapper">
+      <h2 class="list-title">Tasks Completed</h2>
+      <Ul class="task-list" id="tasks-completed"></Ul>
+    </section>
+    
   </main>
   <!-- EMD of MAIN -->
 
