added ability to delet and edit tasks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- END of HEADER -->
 
   <!-- MAIN -->
-  <main class="page-content">
+  <main class="page-content" id="page-content">
 
     <!-- Tasks To Do -->
     <section class="task-list-wrapper">
